--- a/task3/index.html
+++ b/task3/index.html
@@ -80,12 +80,12 @@
                     <option value="month">Раз в месяц</option>
                 </select>
                 <div class="check_actions">
-                    <input type="checkbox" name="actions_and_sales" checked="checked" class="check_actions_text">
-                    <p class="check_text">Акции и скидки</p>
+                    <input type="checkbox" name="actions_and_sales" class="actions_and_sales" id="actions_and_sales" class="check_actions_text">
+                    <label for="actions_and_sales" class="check_text">Акции и скидки</label>
                 </div>
                 <div class="check_news">
-                    <input type="checkbox" name="new_articles">
-                    <p class="check_text">Новые статьи в блоге</p>
+                    <input type="checkbox" name="new_articles" class="new_articles" id="new_articles">
+                    <label for="new_articles" class="check_text">Новые статьи в блоге</label>
                 </div>
                 <button type="submit" class="subscribe_button">Подписаться</button>
             </form>
