--- a/task2/index.html
+++ b/task2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 
 <head>
     <meta charset="utf-8">
@@ -71,7 +71,7 @@
         <div class="subscribe_info">
             <h1 class="subscribe_title">Подпишитесь и получайте новости первыми</h1>
             <p class="subscribe_text">В рассылке мы сообщаем о наших акциях и специальных предложениях. Вы можете получать эту информацию из первых рук.</p>
-            <form action="" method="get">
+            <form action="send.php" method="get">
                 <input type="text" name="email" placeholder="Ввведите email" class="enter-email">
                 <button type="submit" class="subscribe_button">Подписаться</button>
             </form>
