--- a/task3/index.html
+++ b/task3/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 
 <head>
     <meta charset="utf-8">
@@ -71,7 +71,7 @@
         <div class="subscribe_info">
             <h1 class="subscribe_title">Подпишитесь и получайте новости первыми</h1>
             <p class="subscribe_text">В рассылке мы сообщаем о наших акциях и специальных предложениях. Вы можете получать эту информацию из первых рук.</p>
-            <form action="" method="get">
+            <form action="send.php" method="get">
                 <input type="text" name="name" placeholder="Ввведите ваше имя" class="enter-name">
                 <input type="text" name="email" placeholder="Ввведите email" class="enter-email">
                 <select name="period" class="period-select">
@@ -80,7 +80,7 @@
                     <option value="month">Раз в месяц</option>
                 </select>
                 <div class="check_actions">
-                    <input type="checkbox" name="actions_and_sales" class="actions_and_sales" id="actions_and_sales" class="check_actions_text">
+                    <input type="checkbox" name="actions_and_sales" class="actions_and_sales" id="actions_and_sales">
                     <label for="actions_and_sales" class="check_text">Акции и скидки</label>
                 </div>
                 <div class="check_news">
